# Distributed-Bank-transfer-system

./: CMakeLists.txt  Makefile.txt  Readme.md  build.sh  lab_cpp.cpp
docs/: PROJECT_STRUCTURE.md
include/: banking_system.h
include/banking_system/common/: clock.h  types.h  utils.h
include/banking_system/process/: child_worker.h  parent_controller.h
include/banking_system/shard/: account_shard.h  shard_manager.h
include/banking_system/transfer/: cross_shard_context.h  transfer_task.h
src/: main.cpp
src/common/: clock.cpp  utils.cpp
src/process/: child_worker.cpp  parent_controller.cpp
src/shard/: account_shard.cpp  shard_manager.cpp
